# formula_student_autonomy_simulation

./: .gitattributes  .gitignore  LICENSE  README.md
devcontainer/: README.md
docker/: Dockerfile  README.md  docker_build.sh  docker_run.sh  ros_entrypoint.sh
falcon_ws/: patch_install.sh
falcon_ws/src/eufs_msgs/msg/: LapStats.msg
falcon_ws/src/eufs_sim/eufs_launcher/: setup.py
falcon_ws/src/eufs_sim/eufs_launcher/config/: default.rviz
falcon_ws/src/eufs_sim/eufs_launcher/launch/: simulation.launch.py
falcon_ws/src/eufs_sim/eufs_launcher/src/eufs_launcher/: LauncherModule.py
falcon_ws/src/eufs_sim/eufs_plugins/: package.xml
falcon_ws/src/eufs_sim/eufs_plugins/gazebo_race_car_model/src/: gazebo_ros_race_car_model.cpp
falcon_ws/src/eufs_sim/eufs_plugins/gazebo_simulate_bounding_boxes/: CMakeLists.txt
falcon_ws/src/eufs_sim/eufs_plugins/gazebo_simulate_bounding_boxes/include/gazebo_simulate_bounding_boxes/: gazebo_simulate_bounding_boxes.hpp
falcon_ws/src/eufs_sim/eufs_racecar/: setup.py
falcon_ws/src/eufs_sim/eufs_racecar/launch/: load_car.launch.py
falcon_ws/src/eufs_sim/eufs_racecar/robots/ads-dv/: robot.urdf.xacro
falcon_ws/src/eufs_sim/eufs_racecar/robots/eufs/: robot.urdf.xacro
falcon_ws/src/eufs_sim/eufs_racecar/urdf/: wheels.urdf.xacro
falcon_ws/src/eufs_sim/eufs_rqt/: setup.py
falcon_ws/src/eufs_sim/eufs_rqt/src/eufs_rqt/: EUFSRobotSteeringGUI.py
falcon_ws/src/eufs_sim/eufs_sensors/urdf/: all_sensors.urdf.xacro  lidar.urdf.xacro  teleop_camera.urdf.xacro
falcon_ws/src/eufs_sim/eufs_tracks/: setup.py
falcon_ws/src/falcon_bringup/: package.xml  readme.md  setup.cfg  setup.py
falcon_ws/src/falcon_bringup/launch/: autonomy.launch.py  autonomy_perception.launch.py  bringup.launch.py  sim_only.launch.py  simulation.launch.py
falcon_ws/src/falcon_bringup/scripts/: enable_manual_drive
falcon_ws/src/falcon_common/: CMakeLists.txt  package.xml  readme.md
falcon_ws/src/falcon_cone_bridge/: README.md  package.xml  setup.cfg  setup.py
falcon_ws/src/falcon_cone_bridge/falcon_cone_bridge/: cone_bridge_node.py
falcon_ws/src/falcon_cone_bridge/launch/: cone_bridge.launch.py
falcon_ws/src/falcon_cone_bridge/scripts/: cone_bridge_node
falcon_ws/src/falcon_cone_fusion/: CMakeLists.txt  package.xml  readme.md
falcon_ws/src/falcon_cone_fusion/config/: cone_fusion.yaml
falcon_ws/src/falcon_cone_fusion/src/: cone_fusion_node.cpp
falcon_ws/src/falcon_cone_map_builder/: CMakeLists.txt  package.xml  readme.md
falcon_ws/src/falcon_cone_map_builder/config/: cone_map_builder.yaml
falcon_ws/src/falcon_cone_map_builder/include/falcon_cone_map_builder/: cone_map_builder_node.hpp  landmark.hpp
falcon_ws/src/falcon_cone_map_builder/launch/: cone_map_builder.launch.py
falcon_ws/src/falcon_cone_map_builder/src/: cone_map_builder_node.cpp  main.cpp
falcon_ws/src/falcon_cone_perception/: CMakeLists.txt  README.md  package.xml  setup.py
falcon_ws/src/falcon_cone_perception/config/: cone_perception.yaml  topic_remaps.yaml  yolo_detector.yaml
falcon_ws/src/falcon_cone_perception/launch/: camera_cone_detection.launch.py  cone_detection.launch.py  full_stack.launch.py  perception.launch.py
falcon_ws/src/falcon_cone_perception/models/: README.md
falcon_ws/src/falcon_cone_perception/scripts/: cone_depth_localizer.py  cone_fuser.py  lidar_cone_detector.py
falcon_ws/src/falcon_cone_perception/src/: cone_perception_node.cpp
falcon_ws/src/falcon_drivers/: README.md  package.xml  setup.cfg  setup.py
falcon_ws/src/falcon_localization/: CMakeLists.txt  package.xml  readme.md
falcon_ws/src/falcon_msgs/: CMakeLists.txt  package.xml
falcon_ws/src/falcon_msgs/msg/: Cone.msg  ConeArray.msg
falcon_ws/src/falcon_planning/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
falcon_ws/src/falcon_planning/config/: path_planner.yaml  pure_pursuit.yaml
falcon_ws/src/falcon_planning/falcon_planning/: path_planner_node.py  pure_pursuit_node.py
falcon_ws/src/falcon_planning/launch/: planning.launch.py
falcon_ws/src/falcon_planning/scripts/: path_planner_node  pure_pursuit_node
falcon_ws/src/falcon_sim/: package.xml  readme.md  setup.cfg  setup.py
falcon_ws/src/falcon_sim/config/: sim.yaml
falcon_ws/src/falcon_sim/falcon_sim/: falcon_sim_node.py
falcon_ws/src/falcon_sim/maps/: README.md
falcon_ws/src/falcon_sim/urdf/: README.md
falcon_ws/src/falcon_teleop/: README.md  package.xml  setup.py
falcon_ws/src/falcon_teleop/falcon_teleop/: keyboard_teleop.py
falcon_ws/src/falcon_teleop/launch/: teleop.launch.py
falcon_ws/src/falcon_vehicle_comm/: CMakeLists.txt  package.xml  readme.md
falcon_ws/src/falcon_vehicle_comm/src/: vehicle_comm_node.cpp
scripts/: rebuild_ws.sh  requirements-falcon-env.txt  setup_falcon.sh
