<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>falcon_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for Falcon autonomy stack</description>
  <maintainer email="falcone@gmail.com">FalconE Racing</maintainer>
  <author email="falcone@gmail.com">FalconE Racing</author>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>falcon_cone_perception</depend>
  <depend>falcon_cone_map_builder</depend>
  <depend>falcon_planning</depend>
  <depend>eufs_launcher</depend>
  <depend>eufs_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
