<?xml version="1.0"?>
<package format="3">
  <name>falcon_cone_perception</name>
  <version>0.0.0</version>
  <description>Falcon cone perception</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>