<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>falcon_msgs</name>
  <version>0.1.0</version>
  <description>Cone and ConeArray message definitions for Falcon autonomy stack</description>
  <maintainer email="falcone@gmail.com">FalconE Racing</maintainer>
  <author email="falcone@gmail.com">FalconE Racing</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
