<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>falcon_teleop</name>
  <version>0.1.0</version>
  <description>Keyboard teleop with embedded front-view for EUFS simulation</description>
  <maintainer email="falcone@gmail.com">FalconE Racing</maintainer>
  <author email="falcone@gmail.com">FalconE Racing</author>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eufs_msgs</depend>
  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
